# ThesisBackend

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  notes.txt  pyproject.toml  setup.bat
app/: config.py  database.py  llm.py  main.py  models.py
